# QuantAgent

./: .coverage  .env.example  .gitignore  AGENTS.md  CHANGELOG_BACKTEST_FIXES.md  CLAUDE.md  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.claude/: settings.local.json
alembic/: env.py
alembic/versions/: 1543e9a20a69_fix_json_index_on_backtest_runs_remove_.py  3a79614a69d2_add_environment_tagging_provenance_.py  830b128fd5df_create_initial_schema_with_order_fill_.py  89b89b8ee086_add_trading_components_schema.py  bc62fb14351d_backtesting_y_data_provider.py
apps/: __init__.py
apps/flask/: web_interface.py
apps/streamlit/: __init__.py  app.py
docs/: MIGRATIONS.md  README.md  dev-tools-setup.md  workflow-integration.md
docs/01_requirements/: trading_system_requirements.md  ui_streamlit_mvp_requirements.md
docs/02_planning/: little_tasks_todo.md  phase1_roadmap.md  phase2_roadmap.md
docs/03_technical/: 20251130_Implementation_AgentParallelization.md  CONFIGURATION.md  IMPLEMENTATION_WEEK5_TRADING_EXECUTION.md  MESSAGE_STATE_MANAGEMENT.md  TESTING_PATTERNS.md  backtesting_engine.md  data_caching_architecture.md  docker_deployment.md  langgraph_improvements.md  strategy_assembler_architecture.md  streamlit_app_architecture.md  ui_framework_decision.md
examples/: run_backtest.py
quantagent/: agent_models.py  agent_state.py  agent_utils.py  database.py  decision_agent.py  default_config.py  graph_setup.py  graph_util.py  indicator_agent.py  models.py  pattern_agent.py  settings.py  static_util.py  trading_graph.py  trend_agent.py
quantagent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
quantagent/backtesting/: __init__.py  backtest.py
quantagent/config/: manager.py
quantagent/data/: __init__.py  provider.py
quantagent/portfolio/: manager.py
quantagent/risk/: __init__.py  manager.py
quantagent/strategy/: __init__.py  assembler.py
quantagent/trading/: __init__.py  (+4 more)
scripts/: migrations_helper.py  setup_postgres.py
tests/: README.md  TESTING_SETUP.md  __init__.py  conftest.py  test_backtest.py  test_backtest_integration.py  test_checkpointing_resume.py  test_data_provider.py  test_decision_agent_refactor.py  test_example.py  test_indicator_agent_refactor.py  test_integration_full_graph.py  test_migrations.py  test_parallel_execution.py  test_pattern_agent_refactor.py  test_portfolio_manager.py  test_risk_manager.py  test_static_util.py  test_strategy_assembler.py  test_trading_components.py  test_trend_agent_refactor.py
(+12 files in other folders)
