[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quantagent"
version = "0.1.0"
description = "Multi-agent trading analysis system using vision-capable LLMs"
authors = [{name = "QuantAgent Team"}]
requires-python = ">=3.9"
dependencies = [
    "flask",
    "yfinance",
    "pandas",
    "numpy",
    "matplotlib",
    "mplfinance",
    "scipy",
    "TA-Lib",
    "langchain",
    "langchain-openai",
    "langchain-anthropic",
    "langchain-qwq",
    "langchain-core",
    "langgraph",
    "openai",
    "anthropic",
    "ipython",
    "Pillow",
    "requests",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "pytest-mock", "black", "ruff"]

[tool.setuptools]
packages = ["quantagent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers --tb=short"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "api: marks tests requiring API calls",
    "vision: marks tests using vision-capable LLMs",
]
norecursedirs = [".git", ".venv", "venv", ".egg", "dist", "build"]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
source = ["quantagent"]
omit = [
    "*/tests/*",
    "*/__init__.py",
    "*/venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
